--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^20.0.0-rc.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "cropperjs": "^1.5.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -42,6 +43,7 @@
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.1",
     "@angular/localize": "^21.0.1",
+    "@types/cropperjs": "^1.1.5",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
