--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^21.0.1",
     "@angular/cdk": "^20.2.14",
     "@angular/common": "^21.0.1",
     "@angular/compiler": "^21.0.1",
     "@angular/core": "^21.0.1",
     "@angular/forms": "^21.0.1",
-    "@angular/material": "^20.2.14",
     "@angular/platform-browser": "^21.0.1",
     "@angular/router": "^21.0.1",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0-rc.0",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@angular/build": "^21.0.0",
-    "@angular/cli": "^21.0.0",
+    "@angular/cli": "^20.0.6",
     "@angular/compiler-cli": "^21.0.1",
     "@angular/localize": "^21.0.1",
     "@types/cropperjs": "^1.1.5",
