--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "cropperjs": "^1.5.13",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
